navbar-and-basic-structure-of-the-portfolio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio</title>
+    <title>Maisha Maliha Chowa · SQA Automation Engineer</title>
+    <meta
+      name="description"
+      content="Portfolio of Maisha Maliha Chowa, SQA Automation Engineer specializing in Playwright, Selenium, and QA automation."
+    />
   </head>
   <body>
     <div id="root"></div>
